--- a/App.xaml
+++ b/App.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:MGA"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <Style TargetType="{x:Type Button}" x:Key="StyleButtonBar">
+        <Style TargetType="{x:Type Button}" x:Key="StyleButtonNavBar">
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Background" Value="AliceBlue" />
@@ -30,18 +30,5 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        <Style TargetType="{x:Type Button}" x:Key="StyleButtonNone">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border 
-                                Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        
     </Application.Resources>
 </Application>
